@startuml
title Notification State Transitions
hide empty description

skinparam state {
  BackgroundColor #6096C4
  BorderColor #1A5276
  FontColor white
  FontStyle Bold
  ArrowColor #555555
  ArrowFontColor #555555
}
skinparam backgroundColor white

[*] --> PENDING

PENDING --> CANCELLED : TO_CANCELLED
PENDING --> SENDING : TO_PROCESSING
SENDING --> FAILED : TO_PROCESSING
SENDING --> RETRY_WAITING : STUCK_SENDING_ROLLBACK
SENDING --> SENT : TO_PROCESSING
SENDING --> DEAD_LETTER : STUCK_RECOVERY
SENT --> [*]
FAILED --> CANCELLED : TO_CANCELLED
FAILED --> DEAD_LETTER : TO_PROCESSING
FAILED --> RETRY_WAITING : TO_PROCESSING
RETRY_WAITING --> CANCELLED : TO_CANCELLED
RETRY_WAITING --> SENDING : TO_PROCESSING
DEAD_LETTER --> CANCELLED : TO_CANCELLED
DEAD_LETTER --> RETRY_WAITING : TO_RETRYING
CANCELLED --> RETRY_WAITING : TO_RETRYING

@enduml
